1nginxpod.yml
apiVersion: v1
kind: Pod
metadata:
 name: myconfigmap
 labels:
  app: dev
spec:
 containers:
   - image: nginx
     name: mynginxcontainer
     ports:
       - containerPort: 3306
