empty.yml
apiVersion: v1
kind: Pod
metadata:
  name: emptypod
spec:
  containers:
    - image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
      name: ngcontainer
      volumeMounts:
        - name: htmlfolder
          mountPath: /usr/share/nginx/html
  volumes:
     - name: htmlfolder
       emptyDir: {}
