girepo.yml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepopod
spec:
  containers:
    - image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
      name: ngcontainer
      volumeMounts:
        - name: htmlfolder
          mountPath: /usr/share/nginx/html
  volumes:
     - name: htmlfolder
       gitRepo:
         repository: https://github.com/Sahilmulani1999/rahul.git
         revision: master
         directory: .
