label1.yml
apiVersion: v1
kind: Pod
metadata:
 name: mynginxpod
 labels:
   env: instagram
spec:
 containers:
   - image: nginx
     name: mynginxcontainer
     ports:
       - containerPort: 80
