lable2.yml
apiVersion: v1
kind: Pod
metadata:
 name: mynginxpod
 labels:
   env: instagram
   app: fakebokk
spec:
 containers:
   - image: nginx
     name: mynginxcontainer
     ports:
       - containerPort: 80
       - hostPort: 80
