namespacefb.yml
apiVersion: v1
kind: Pod
metadata:
 name: mynginxpod1
 namespace: myns
 labels:
   app: rummy
spec:
 containers:
   - image: nginx
     name: mynginxcontainer
     ports:
       - containerPort: 80
