nfspod.yml
apiVersion: v1
kind: Pod
metadata:
  name: efspod
spec:
  containers:
    - image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
      name: ngcontainer
      volumeMounts:
        - name: htmlfolder
          mountPath: /usr/share/nginx/html
  volumes:
     - name: htmlfolder
       nfs:
         server: "fs-0ebba98f00668b17e.efs.us-east-1.amazonaws.com"
         path: /test
