rahul.yml
apiVersion: v1
kind: Pod
metadata:
 name: mynginxpod1
spec:
 containers:
   - image: nginx
     name: mynginxcontainer
     ports:
       - containerPort: 80
         hostPort: 80
