headless.yml
apiVersion: v1
kind: Service
metadata:
  name: myheadless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
  selector:
      app: dev
